--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 <body ng-app="myApp">
     <nav>
         <ul>
-            <li><a href="#!/">Home</a></li>
-            <li><a href="#!/frodo">Frodo</a></li>
+            <button><a href="#!/">Home</a></button>
+            <button><a href="#!/frodo">Frodo</a></button>
         </ul>
     </nav>
     <ng-view></ng-view>
