everything is working

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <ul>
             <button><a href="#!/">Home</a></button>
             <button><a href="#!/frodo">Frodo</a></button>
+            <button><a href="#!/gandalf">Gandalf</a></button>
+            <button><a href="#!/gimli">Gimli</a></button>
         </ul>
     </nav>
     <ng-view></ng-view>
