--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     <script src="vendors/angular-route.min.js"></script>
     <script src="scripts/client.js"></script>
     <script src="scripts/controllers/home.controller.js"></script>
+    <script src="scripts/controllers/gandalf.controller.js"></script>
+    <script src="scripts/controllers/gimli.controller.js"></script>
     <script src="scripts/controllers/frodo.controller.js"></script>
+    <link href="css/main.css" rel="stylesheet" type="text/css">  
+
     
     
     <title>Document</title>
